# CreatorEconomy

./: .gitignore  .vercelignore  Anchor.toml  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  README.md  UPDATE_CONTRACT_GUIDE.md  package-lock.json  package.json  tsconfig.json  vercel.json
app/: .env.local  next.config.ts  package.json  tsconfig.json
app/.next/: app-build-manifest.json  build-manifest.json  react-loadable-manifest.json  trace
app/.next/cache/: .rscinfo
app/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
app/.next/server/app/: page.js  page_client-reference-manifest.js
app/.next/server/vendor-chunks/: @coral-xyz.js  @noble.js  (+31 more)
app/app/: layout.tsx  page.tsx
app/app/creator/: page.tsx
app/app/test-wallet/: page.tsx
app/components/: ClientInitializer.tsx  ErrorBoundary.tsx  ErrorSuppressor.tsx  Header.tsx
app/components/ui/: ErrorModal.tsx  SuccessModal.tsx  index.ts
app/components/wallet/: WalletButton.tsx  WalletProvider.tsx
app/hooks/: useContent.ts  useProgram.ts  usePublish.ts  useTip.ts
app/lib/anchor/: idl.ts  types.ts
app/lib/idl/: creator_economy.json
app/lib/utils/: constants.ts  error-handler.ts  format.ts  pda.ts
app/lib/wallet/: adapters.ts
app/styles/: globals.css
migrations/: deploy.ts
programs/creator-economy/: Cargo.toml
programs/creator-economy/src/: constants.rs  errors.rs  lib.rs  state.rs
scripts/: README.md  initialize-platform.ts  tsconfig.json  update-contract.sh
tests/: creator-economy.ts
(+73 files in other folders)
